trustfall_core/test_data/tests/valid_queries/no_op_fragment.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        successor {
            ... {
                value @output
            }
        }
    }
}"#,
    arguments: {},
)
